# stock_recommendation

./: .env.example  .gitignore  Agent.md  README.md  pyproject.toml  requirements.txt
config/: agent_config.json  news_config.aggressive.json  news_config.conservative.json  news_config.json  notifications.json
data/: README.md  today
data/daily/20260329/history/: equity_curve.csv  post_analysis_history.jsonl  top10_history.csv  trades_log.csv
data/daily/20260329/latest/: alerts.json  last_alert.txt  portfolio_report.md  portfolio_status.json  post_analysis.json  top10.csv  top10.md
data/daily/20260329/portfolio/: state.json
data/daily/20260330/history/: daily_summary_20260330.md  daily_summary_state.json  equity_curve.csv  post_analysis_history.jsonl  top10_daily.csv  top10_history.csv  (+1 more)
data/model/: model_params.json
data/portfolio/: state.json
data/simple/: README.md  alerts.json  daily_summary.md  portfolio_report.md  post_analysis.json  status.json  top10.csv  top10.md
scripts/: install_cron.sh  install_launchd.sh  install_task_scheduler.ps1  run_agent.ps1  run_agent.sh  uninstall_cron.sh  uninstall_launchd.sh  uninstall_task_scheduler.ps1
skills/: README.md
skills/stock-analysis/: SKILL.md
skills/stock-automation/: SKILL.md
stock_option_agent/: agent.py  stock_recommendation.py
stock_recommendation/: __init__.py  config.py  main.py  rag.py
stock_recommendation/agents/: __init__.py  stock_recommendation.py
stock_recommendation/tools/: __init__.py  backtest.py  fundamentals.py  market_data.py  news.py  paper_portfolio.py  technicals.py
(+632 files in other folders)
